--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node ./dist/index.js",
+    "build": "babel ./src --out-dir dist",
     "dev": "nodemon --exec babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Yo",
+  "author": "Ana Arce",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.19.3",
